# IFC-Import-Plugin

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DeleteBuildUser.bat  IFC-Import-Plugin.pro  LICENSE  README.md  pull_and_fast_forward.bat
.github/workflows/: IFCImportPlugin-Ubuntu2404.yml  IFCImportPlugin-WindowsVC2022.yml
IFC2BESTest/: CMakeLists.txt  IFC2BESTest.pro
IFC2BESTest/projects/Qt/: IFC2BESTest.pro
IFC2BESTest/projects/build-IFC2BESTest-Desktop Qt 5.15.2 MSVC2019 64bit neu-Debug/debug_x64/: .gitignore
IFC2BESTest/projects/build-IFC2BESTest-Desktop Qt 5.15.2 MSVC2019 64bit neu-Debug/moc/: .gitignore
IFC2BESTest/projects/build-IFC2BESTest-Desktop Qt 5.15.2 MSVC2019 64bit neu-Release/ui/: .gitignore
IFC2BESTest/projects/cmake_local/: CMakeLists.txt
IFC2BESTest/resources/translations/: IFC2BESTest_de.qm  IFC2BESTest_de.ts  ImportIFCPlugin_de.qm  release_tr.bat  update_tr.bat
IFC2BESTest/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
IfcDebug/projects/Qt/: IfcDebug.pro
IfcDebug/projects/Qt/debug_x64/: .gitignore
IfcDebug/src/: IfcDebug_MainWidget.cpp  IfcDebug_MainWidget.h  IfcDebug_MainWidget.ui  main.cpp
data/: .gitignore  AZA 20.vicus  Spaces with walls.TXT
data/tests/: .gitignore
doc/: .gitignore  AC20 FZK Haus Datenstruktur.docx  Clipper lib Operationen.docx  GeomTransformations.mcd  Haus FZK Spaces und Wände.docx  Properties in IFC.TXT  SimVicus xml struct.xlsx  Spaces and more.docx  Vererbung der ifc Klassen.docx  convertIfcRepresentation.pap
resources/translations/: ImportIFCPlugin_de.qm
